# edgetone

./: .gitignore
CFD/src/FD/: FD.py
CFD/src/LBM/: LBM.py
VST/JUCE/: .gitignore
VST/JUCE/edgetone/: CMakeLists.txt  CMakePresets.json  build.sh  edgetone.jucer  win.sh
VST/JUCE/edgetone/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
VST/JUCE/edgetone/src/: DemoUtilities.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SineOscillator.h
VST/RS/: Cargo.toml
